testing/Travis/testcases/TypeChecker/shouldFail/DiamondTypeMismatch.adl
CONTEXT DiamondTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT DiamondTypeMismatchCheck
{+ This test must fail because meet(C,A) does not exist.
   The target of result[A*C] and the target of r<>r~ do not match. +}

RELATION r[A*B]
RELATION result[A*C]

RULE testDiamondFail: result = r<>r~

ENDCONTEXT
